--- a/src/components/homepage/Homepage.css
+++ b/src/components/homepage/Homepage.css
@@ -1,25 +1,30 @@
 .homepage-picture-text {
   font-size: 35px;
-  position: "absolute";
-  width: 50%;
-  right: "5%";
+  position: absolute;
+  width: 30%;
+  right: 5%;
 }
 
 @media only screen and (max-width: 1100px) {
   div > .homepage-picture-text {
-    font-size: 20px;
+    font-size: 5vw;
     width: 50%;
-    position: "absolute";
-    right: "5%";
+    position: absolute;
+    right: 5%;
   }
 }
 
 @media only screen and (max-width: 768px) {
+  div > .homepageTitle {
+    font-size: 10vw;
+    padding-top: 40vh;
+  }
   div > .homepage-picture-text {
-    font-size: 11px;
-    width: 50%;
-    position: "absolute";
-    right: "5%";
+    font-size: 5vw;
+    padding-top: 5%;
+    width: 60%;
+    position: absolute;
+    right: 30%;
   }
   div > .text-picture-container-1 {
     flex-direction: column;
@@ -50,18 +55,19 @@
     font-size: 0.8em;
   }
   div > .NaseDeloTitle {
-    font-size: 1.5em;
+    font-size: 2.3em;
     padding-top: 3%;
   }
   div > .NaseDeloText {
-    font-size: 0.8em;
+    font-size: 1.2em;
   }
   div > .NaseDeloTitle2 {
-    font-size: 1.5em;
+    font-size: 2.3em;
     padding-top: 10%;
   }
   div > .NaseDeloText2 {
-    font-size: 0.8em;
+    font-size: 1.2em;
+    min-width: 60vw;
     padding-left: 6%;
     padding-bottom: 12%;
   }
@@ -71,7 +77,7 @@
 
   div > .carouselDiv {
     height: 380px;
-    width: 240px;
+    width: auto;
     padding-top: 5%;
     padding-left: 5%;
     padding-right: 7%;
@@ -80,8 +86,18 @@
   div > .logoImage {
     background-size: 70%;
   }
+  div > .homepagePlanTech {
+    height: 100vh;
+  }
 }
 
+.homepageTitle {
+  font-size: 10vw;
+}
+
+.homepagePlanTech {
+  height: auto;
+}
 .logoImage {
   background-size: 30%;
 }
