--- a/src/components/homepage/Homepage.css
+++ b/src/components/homepage/Homepage.css
@@ -7,8 +7,8 @@
 
 @media only screen and (max-width: 1100px) {
   div > .homepage-picture-text {
-    font-size: 4vw;
-    width: 50%;
+    font-size: 3vw;
+    width: 40%;
     position: absolute;
     right: 3%;
   }
@@ -17,7 +17,7 @@
 @media only screen and (max-width: 768px) {
   div > .homepageTitle {
     font-size: 13vw;
-    padding-top: 40vh;
+    padding-top: 30vh;
     flex-direction: column;
   }
   div > .homepage-picture-text {
@@ -78,10 +78,6 @@
   div > .carouselDiv {
     height: 380px;
     width: auto;
-    padding-top: 5%;
-    padding-left: 5%;
-    padding-right: 7%;
-    margin-bottom: 4%;
   }
   div > .logoImage {
     background-size: 70%;
@@ -92,6 +88,28 @@
   div > .homepageLogo {
     width: 40vw;
   }
+  div > .divOverflow {
+    width: 80%;
+    height: 10vw;
+    margin-left: 10%;
+  }
+  div > .narrowDivs {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+}
+
+.narrowDivs {
+  margin-left: 18%;
+  margin-right: 18%;
+}
+
+.divOverflow {
+  width: 64%;
+  height: 4vw;
+  margin-left: 18%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12),
+    0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
 }
 
 .homepageLogo {
@@ -112,10 +130,13 @@
 
 .carouselDiv {
   height: 380px;
-  padding-top: 5%;
-  padding-left: 14%;
-  padding-right: 14%;
+  margin-top: 5%;
+  margin-left: 14%;
+  margin-right: 14%;
   margin-bottom: 4%;
+
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12),
+    0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
 }
 
 .pin {
