--- a/src/components/quality/Quality.css
+++ b/src/components/quality/Quality.css
@@ -25,7 +25,9 @@
   width: 90vw;
   height: auto;
   padding: 5%;
-  box-shadow: 7px 7px 20px #949494, -7px -7px 14px #ffffff;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07),
+    0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07),
+    0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
   margin: auto;
   border-radius: 10px;
 }
