--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -17,6 +17,7 @@
   margin-top: 5%;
   font-family: "MyFont";
   font-size: 25px;
+  color: white;
 }
 .contact-form {
   width: 90vw;
@@ -27,7 +28,7 @@
     0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07),
     0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
   border: 1px solid black;
-  background-color: whitesmoke;
+  background-color: #414c50;
 }
 
 .inputs {
@@ -39,7 +40,7 @@
 
 .SubmitButton {
   border-radius: 10px;
-  background: rgb(239, 243, 255);
+  background: #2d383c;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12),
     0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
   width: 10vw;
@@ -50,13 +51,13 @@
 }
 
 .SubmitButton:active {
-  box-shadow: 5px 5px 10px #bebebe, -3px -3px 10px #ffffff;
+  box-shadow: 5px 5px 10px #313131, -3px -3px 3px #000000;
 }
 
 .messageArea {
   height: 30vh;
   border-radius: 6px;
-  background: #e0e0e0;
+  background: #2d383c;
   border: 1px solid black;
   resize: none;
 }
@@ -64,7 +65,7 @@
 .emailInput {
   border: 1px solid black;
   border-radius: 6px;
-  background: #e0e0e0;
+  background: #2d383c;
 }
 
 .form-container {
