--- a/src/components/quality/Quality.css
+++ b/src/components/quality/Quality.css
@@ -8,6 +8,8 @@
   }
   div > .quality-text {
     font-size: 1.2em;
+
+    font-family: "MyFontNoBold";
   }
 }
 .quality-text {
@@ -19,6 +21,11 @@
   text-align: center;
   width: 100vw;
   font-size: 3em;
+  color: whitesmoke;
+}
+
+.background {
+  background-color: #2d383c;
 }
 
 .text-container {
@@ -28,6 +35,8 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07),
     0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07),
     0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
+  background-color: #414c50;
+  color: whitesmoke;
   margin: auto;
   border-radius: 10px;
 }
