New update, let's hope SEO goes up

--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -15,7 +15,7 @@
   align-items: center;
   justify-content: center;
   margin-top: 5%;
-  font-family: "MyFont";
+  font-family: "Poppins";
   font-size: 25px;
   color: white;
 }
