--- a/src/components/quality/Quality.css
+++ b/src/components/quality/Quality.css
@@ -9,7 +9,7 @@
   div > .quality-text {
     font-size: 1.2em;
 
-    font-family: "MyFontNoBold";
+    font-family: "Poppins";
   }
 }
 .quality-text {
@@ -22,7 +22,6 @@
 }
 
 .title {
-  font-family: "MyFont";
   text-align: center;
   width: 100vw;
   font-size: 3em;
