--- a/src/index.css
+++ b/src/index.css
@@ -2,23 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: "MyFont";
-  src: local("RobotoSlab-bold"),
-    url("./fonts/Barlow/Barlow-Bold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "MyFontNoBold";
-  src: local("RobotoSlab-Regular"),
-    url("./fonts/Barlow/Barlow-Regular.ttf") format("truetype");
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Poppins";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: whitesmoke;
